--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tg-ahop",
+  "name": "tg_shop",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tailwindcss/oxide": "^4.2.1",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
